[tool.poetry]
name = "tree-tools"
version = "0.1.0"
description = ""
authors = ["Ez Ablaza <ezra.ablaza.inbox@gmail.com>"]
readme = "README.md"
packages = [{include = "tree_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
